Upgrade to modern HttpClient for improved performance. Replaces the legacy HttpURLConnection with java.net.http.HttpClient to boost network performance and reliability: - HTTP/2 Support: Enables request multiplexing, reducing latency. - Efficient Connection Pooling: Reuses connections to minimize TCP/TLS handshake overhead, which is critical for this high-throughput software. This results in better performance and a more robust, modern, and maintainable HTTP layer.